Fixing InAppMessage footer styles issue on mobile devices (#111)

--- a/packages/design-system/src/components/InAppMessage/style.scss
+++ b/packages/design-system/src/components/InAppMessage/style.scss
@@ -117,7 +117,7 @@
     }
 
     &__with_footer {
-      padding-bottom: 125px;
+      padding-bottom: 135px;
     }
   }
 
